--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     
     <style>
 
-
+body {
+    font-weight: 500; /* Imposta il peso del font a 500 */
+}
         
 :root {
     --primary: #970a2c;    /* amaranto */
