--- a/index.html
+++ b/index.html
@@ -1532,7 +1532,7 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
 
     try {
         // Invia la richiesta al Worker invece che direttamente a EmailJS
-        const response = await fetch('https://donation-limiterjs.bibliotecamorante.workers.dev/', {
+        const response = await fetch('https://donation-limiterjs.bibliotecamorante.workers.dev/api/donate', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
