--- a/index.html
+++ b/index.html
@@ -1554,7 +1554,9 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
             })
         });
 
-        const data = await response.json();
+            console.log('Response status:', response.status);
+            const data = await response.json();
+            console.log('Response data:', data);
 
         if (response.ok) {
             showSuccessPopup('La tua donazione è stata inviata con successo!');
@@ -1579,7 +1581,7 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
             }
         }
     } catch (error) {
-        console.error('Error:', error);
+        console.error('Detailed error:', error);
         showGlobalErrorPopup('Si è verificato un errore di connessione. Riprova più tardi.');
     } finally {
         removeLoadingOverlay();
