--- a/index.html
+++ b/index.html
@@ -1544,7 +1544,8 @@ document.getElementById('donationForm').addEventListener('submit', async (event)
         }
     };
 
-    console.log('Request Data:', JSON.stringify(emailData, null, 2));
+    // console.log('Request Data:', JSON.stringify(emailData, null, 2));
+
     showLoadingOverlay();
 
     try {
