--- a/index.html
+++ b/index.html
@@ -955,6 +955,7 @@ document.addEventListener('DOMContentLoaded', function() {
 
 
 // Utility function to check if element exists and has classList
+// Utility function to check if element exists and has classList
 function hasClass(element, className) {
     return element && element.classList && element.classList.contains(className);
 }
@@ -962,6 +963,9 @@ function hasClass(element, className) {
 // Validation function for book year
 function validateBookYear(input) {
     if (!input) return false;
+    
+    // Remove non-numeric characters on input
+    input.value = input.value.replace(/\D/g, '');
     
     const currentYear = new Date().getFullYear();
     const value = input.value.trim();
@@ -989,18 +993,44 @@ function validateISBN(input) {
     const value = input.value.trim();
     let isValid = true;
 
-    if (value && !input.matches(':focus')) {
+    if (!value) {
+        // Show gray helper text for empty ISBN
+        showHelperText(input, 'Inserisci il codice ISBN (10 o 13 cifre)');
+    } else if (!input.matches(':focus')) {
         if (!/^(?:\d{10}|\d{13})$/.test(value)) {
             showError(input, 'ISBN deve essere di 10 o 13 cifre');
             isValid = false;
         }
     }
 
-    if (isValid) {
+    if (isValid && value) {
         hideError(input);
+        hideHelperText(input);
     }
 
     return isValid;
+}
+
+// Helper text functions
+function showHelperText(input, text) {
+    const helperDiv = input.parentElement.querySelector('.helper-text') || 
+                     createHelperElement(input);
+    helperDiv.textContent = text;
+    helperDiv.style.display = 'block';
+}
+
+function hideHelperText(input) {
+    const helperDiv = input.parentElement.querySelector('.helper-text');
+    if (helperDiv) {
+        helperDiv.style.display = 'none';
+    }
+}
+
+function createHelperElement(input) {
+    const helperDiv = document.createElement('p');
+    helperDiv.className = 'helper-text text-sm text-gray-500 mt-1';
+    input.parentElement.appendChild(helperDiv);
+    return helperDiv;
 }
 
 // Updated event listeners with proper element checks
@@ -1010,13 +1040,10 @@ document.addEventListener('click', function(e) {
     }
 });
 
-document.addEventListener('blur', function(e) {
+document.addEventListener('input', function(e) {
     if (hasClass(e.target, 'book-year')) {
         validateBookYear(e.target);
     }
-});
-
-document.addEventListener('input', function(e) {
     if (hasClass(e.target, 'book-isbn')) {
         // Remove non-numeric characters
         e.target.value = e.target.value.replace(/\D/g, '');
@@ -1024,10 +1051,16 @@ document.addEventListener('input', function(e) {
         if (e.target.value.length > 13) {
             e.target.value = e.target.value.slice(0, 13);
         }
+        if (!e.target.value) {
+            showHelperText(e.target, 'Inserisci il codice ISBN (10 o 13 cifre)');
+        }
     }
 });
 
 document.addEventListener('blur', function(e) {
+    if (hasClass(e.target, 'book-year')) {
+        validateBookYear(e.target);
+    }
     if (hasClass(e.target, 'book-isbn')) {
         validateISBN(e.target);
     }
@@ -1036,9 +1069,11 @@ document.addEventListener('blur', function(e) {
 document.addEventListener('focus', function(e) {
     if (hasClass(e.target, 'book-isbn') || hasClass(e.target, 'book-year')) {
         hideError(e.target);
+        if (hasClass(e.target, 'book-isbn')) {
+            hideHelperText(e.target);
+        }
     }
 });
-
 
 
 
