--- a/index.html
+++ b/index.html
@@ -849,8 +849,7 @@ function showSuccessPopup(message) {
     popup.style.zIndex = '50';
     popup.style.fontFamily = '"Space Grotesk", sans-serif';
     popup.style.fontSize = '16px';
-    popup.style.fontWeight = '400';
-    popup.style.lineHeight = '1.5';
+    popup.style.lineHeight = '1.6';
 
     // Add the checkmark icon
     const icon = document.createElement('span');
@@ -863,9 +862,10 @@ function showSuccessPopup(message) {
     // Extract email from the message using regex
     const messageText = message.replace(
         /(.+)<br>(.+) ([\w.-]+@[\w.-]+\.\w+)(.*)/, 
-        '$1<br>$2 <span style="color: #1e40af; font-weight: 600;">$3</span>$4'
+        '<strong style="font-weight: 700; font-size: 1.1em; display: block; margin-bottom: 6px;">$1</strong>' +
+        '<span style="display: block; opacity: 0.95;">$2 <span style="color: #1e40af; font-weight: 800; text-decoration: underline;">$3</span>$4</span>'
     );
-    textContainer.innerHTML = `<strong style="font-weight: bold;">${messageText}</strong>`;
+    textContainer.innerHTML = messageText;
     popup.appendChild(textContainer);
 
     // Remove automatically after 5 seconds
@@ -878,7 +878,6 @@ function showSuccessPopup(message) {
     // Add the popup to the body
     document.body.appendChild(popup);
 }
-
 
 
 	
