--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ function showSuccessPopup(message) {
     const messageText = message.replace(
         /(.+)<br>(.+) ([\w.-]+@[\w.-]+\.\w+)(.*)/, 
         '<strong style="font-weight: 700; font-size: 1.1em; display: block; margin-bottom: 6px;">$1</strong>' +
-        '<span style="display: block; opacity: 0.95;">$2 <span style="color: #1e40af; font-weight: 800; text-decoration: underline;">$3</span>$4</span>'
+        '<span style="display: block; opacity: 0.95;">$2 <span style="color: #1e3a8a; font-weight: 800; text-decoration: underline; text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);">$3</span>$4</span>'
     );
     textContainer.innerHTML = messageText;
     popup.appendChild(textContainer);
@@ -878,6 +878,7 @@ function showSuccessPopup(message) {
     // Add the popup to the body
     document.body.appendChild(popup);
 }
+
 
 
 	
