--- a/index.html
+++ b/index.html
@@ -578,8 +578,123 @@ document.head.appendChild(style);
     font-size: 14px; /* Testo leggermente ridotto */
 }
 
+ .form-container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 2rem;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+  }
 
+  .form-row {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 1.5rem;
+    margin-bottom: 1rem;
+  }
 
+  .form-group {
+    margin-bottom: 1.2rem;
+  }
+
+  .form-group label {
+    display: block;
+    font-size: 0.95rem;
+    color: #374151;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+  }
+
+  .form-group label .required {
+    color: #dc2626;
+    font-size: 0.75rem;
+    margin-left: 0.25rem;
+    opacity: 0.8;
+  }
+
+  .form-control {
+    width: 100%;
+    padding: 0.625rem;
+    font-size: 0.95rem;
+    border: 1px solid #d1d5db;
+    border-radius: 0.375rem;
+    background-color: #fff;
+    color: #1f2937;
+  }
+
+  .form-control:focus {
+    outline: none;
+    border-color: #3b82f6;
+    box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.1);
+  }
+
+  .form-control::placeholder {
+    color: #9ca3af;
+  }
+/* Stile migliorato per le etichette dei campi */
+label {
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 0.95rem;
+    color: #374151;
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+}
+
+/* Ridimensionamento dell'asterisco obbligatorio */
+.required-asterisk {
+    color: #970a2c !important;
+    font-size: 0.85em !important;
+    font-weight: 500 !important;
+    margin-left: 2px !important;
+    vertical-align: top !important;
+    opacity: 0.8;
+}
+
+/* Miglioramento degli input */
+input[type="text"],
+input[type="email"],
+input[type="tel"],
+input[type="number"],
+textarea {
+    font-family: 'Space Grotesk', sans-serif;
+    font-size: 0.95rem;
+    padding: 0.625rem 0.75rem;
+    border-radius: 0.375rem;
+    border: 1px solid #d1d5db;
+    background-color: #fff;
+    transition: all 0.2s ease;
+    width: 100%;
+    color: #1f2937;
+}
+
+/* Stato focus migliorato */
+input:focus,
+textarea:focus {
+    border-color: #970a2c;
+    box-shadow: 0 0 0 3px rgba(151, 10, 44, 0.1);
+    outline: none;
+}
+
+/* Placeholder più leggibile */
+input::placeholder,
+textarea::placeholder {
+    color: #9ca3af;
+    opacity: 0.8;
+}
+
+/* Stile errore più sottile */
+.error-message {
+    color: #dc2626;
+    font-size: 0.85rem;
+    margin-top: 0.25rem;
+    font-weight: 400;
+}
+
+/* Input con errore */
+input.error,
+textarea.error {
+    border-color: #dc2626;
+    background-color: #fef2f2;
+}
 
 	    
     </style>
