--- a/termini.html
+++ b/termini.html
@@ -641,8 +641,40 @@ a:hover {
         display: none !important;
     }
 } 
-
       
+
+/* Aggiungi questo CSS dopo lo stile esistente, prima della chiusura del tag style */
+
+@media screen and (max-width: 767px) {
+    /* Modifica dell'header per mobile */
+    header {
+        background-color: #970a2c;  /* amaranto */
+        height: 60px;               /* altezza dimezzata */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* Gestione dei loghi nell'header */
+    .container-header {
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    /* Nascondi il logo Morante su mobile */
+    .container-header img[src="logomorante.png"] {
+        display: none;
+    }
+
+    /* Ridimensiona il logo bianco per mobile */
+    .container-header img[src="logobianco.png"] {
+        height: 35px;  /* Altezza dimezzata rispetto ai 70px originali */
+        width: auto;
+        max-width: 100%;
+    }
+}   
       
    </style>
 </head>
