--- a/termini.html
+++ b/termini.html
@@ -649,7 +649,7 @@ a:hover {
     /* Modifica dell'header per mobile */
     header {
         background-color: #970a2c;  /* amaranto */
-        height: 60px;               /* altezza dimezzata */
+        height: 120px;               /* altezza raddoppiata */
         display: flex;
         align-items: center;
         justify-content: center;
