--- a/termini.html
+++ b/termini.html
@@ -325,13 +325,13 @@ a:hover {
 footer {
     background-color: var(--primary);
     color: #fff;
-    padding: 1.5rem 2rem; /* Added horizontal padding */
+    padding: 1.5rem 1rem; /* Ridotto da 2rem a 1rem */
 }
 
 footer .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 4rem; /* Increased padding from default */
+    padding: 0 2rem; /* Ridotto da 4rem a 2rem */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -372,7 +372,7 @@ footer i {
 /* Adjust spacing for mobile devices */
 @media (max-width: 768px) {
     footer .container {
-        padding: 0 2rem; /* Slightly less padding on mobile */
+        padding: 0 1rem; /* Ridotto da 2rem a 1rem */
     }
 }
       
