--- a/termini.html
+++ b/termini.html
@@ -325,13 +325,14 @@ a:hover {
 footer {
     background-color: var(--primary);
     color: #fff;
-    padding: 1.5rem 1rem; /* Ridotto da 2rem a 1rem */
+    padding: 1.5rem 0.25rem; /* Ridotto drasticamente il padding orizzontale */
 }
 
+/* Update the footer container styles */
 footer .container {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0 2rem; /* Ridotto da 4rem a 2rem */
+    padding: 0 0.5rem; /* Ridotto drasticamente il padding */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -372,7 +373,7 @@ footer i {
 /* Adjust spacing for mobile devices */
 @media (max-width: 768px) {
     footer .container {
-        padding: 0 1rem; /* Ridotto da 2rem a 1rem */
+        padding: 0 0.25rem; /* Ridotto da 2rem a 1rem */
     }
 }
       
