--- a/termini.html
+++ b/termini.html
@@ -325,14 +325,14 @@ a:hover {
 footer {
     background-color: var(--primary);
     color: #fff;
-    padding: 1.5rem 0.25rem; /* Ridotto drasticamente il padding orizzontale */
+    padding: 1.5rem 0.1rem; /* Padding orizzontale quasi zero */
 }
 
 /* Update the footer container styles */
 footer .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 0.5rem; /* Ridotto drasticamente il padding */
+    max-width: 100%; /* Cambiato da 1200px a 100% per permettere al contenuto di estendersi */
+    margin: 0;  /* Rimosso il margin auto */
+    padding: 0 0.1rem; /* Padding quasi zero */
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -373,7 +373,7 @@ footer i {
 /* Adjust spacing for mobile devices */
 @media (max-width: 768px) {
     footer .container {
-        padding: 0 0.25rem; /* Ridotto da 2rem a 1rem */
+        padding: 0 0.1rem; /* Ridotto da 2rem a 1rem */
     }
 }
       
